--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,10 @@
     "action": {
       "default_popup": "hello.html",
       "default_icon": "hello_extensions.png"
-    }
+    },
+    "content_scripts": [{
+        "css": ["styles.css"],
+        "js": ["content.js"],
+        "matches": ["https://codehs.com/*"]
+      }]
   }
